--- a/backupninja/defaults.yaml
+++ b/backupninja/defaults.yaml
@@ -26,3 +26,25 @@ backupninja:
     usecolors: yes
     when: everyday at 01:00
     vservers: no
+  action_defaults:
+    mysql:
+      databases: all
+      backupdir: /var/backups/mysql
+      hotcopy: no
+      sqldump: yes
+      compress: yes
+    rsync:
+      general:
+        mountpoint: /mnt/backup
+        backupdir: myserver
+        format: short
+        days: 7
+      source:
+        from: local
+        include:
+          - /etc
+          - /var/backups/*/
+      dest:
+        dest: remote
+        user: remoteuser
+        id_file: /root/.ssh/id_rsa
