generic shell scripting

--- a/pillar.example
+++ b/pillar.example
@@ -30,6 +30,19 @@ backupninja:
         - dovecot
     11-custom.sh: |
       sleep 1  # your shell code here
+    12-custom-rsync.sh:  # this is for special cases which won't work otherwise
+      rsync:
+        command: rsync  # default
+        port: 22 # default
+        log: /var/log/backup/custom-rsync.log  # default
+        from: /etc/
+        to: user@host:backup
+        args: --recursive --times --delete
+    13-custom.sh:
+      template: salt://backupninja/files/my_custom_template.sh.jinja
+      var1: a
+      var2: b
+    20-all-databases.mysql: {}  # use default config from map.jinja
     20-all-databases.mysql: {}  # use default config from map.jinja
     21-db1_db2.mysql:
       databases: 'db1 db2'
@@ -37,6 +50,7 @@ backupninja:
       start_services:
         - dovecot
         - postfix
+    35-not-needed-any-more.sh: False
     40-transfer.rsync:
       dest:
         host: myhostname
