/var/backups/*/ may not exist.
Fixes 'rsync: link_stat "/var/backups/*" failed: No such file or directory (2)'

--- a/pillar.example
+++ b/pillar.example
@@ -14,7 +14,7 @@ backupninja:
           from: local  # default
           include:  # default
             - /etc
-            - /var/backups/*/
+            - /var/backups/
           exclude:
             - exclude_folder1
             - exclude_folder2
