--- a/backupninja/defaults.yaml
+++ b/backupninja/defaults.yaml
@@ -43,7 +43,7 @@ backupninja:
         from: local
         include:
           - /etc
-          - /var/backups/*/
+          - /var/backups/
       dest:
         dest: remote
         user: remoteuser
